@@ -7,6 +7,7 @@ CHANGES
 -----
 
 * Distribute #375: Repair AttributeError created in last release (redo).
+* Issue #30: Added test for get_cache_path.
 
 -----
 0.7.6
